frontend-web/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webclient-deployment
  labels:
    app: webclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webclient
  template:
    metadata:
      labels:
        app: webclient
    spec:
      containers:
      - name: webclient
        image: registry.cloud.sdu.dk/sdu-cloud/webclient:0.33.0-iss.1135.0
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: webclient-refresh-token
        - mountPath: /etc/token-validation
          name: token-validation

      volumes:
      - name: webclient-refresh-token
        secret:
          optional: false
          secretName: webclient-refresh-token
      - configMap:
          defaultMode: 420
          name: token-validation
        name: token-validation

      imagePullSecrets:
        - name: esci-docker
